small code improvements and additional docs